# pinto

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
pinto/: __init__.py  __main__.py  cli.py  format.py  prompts.py  tools.py  transactions.py
